hphp/test/quick/setop-magic2.php.expectf
Foo heh
Bar heh
Foo heh
HipHop Fatal error: Cannot access protected property in %s/test/quick/setop-magic2.php on line 20
